# uosm_uav_stack

./: .gitignore  .gitmodules  README.md
jetson_config/: nvpmodel.conf
src/nmpc_controller/: CMakeLists.txt  package.xml
src/nmpc_controller/acados_model/: README.md  generate_solver.py
src/nmpc_controller/include/nmpc_controller/: nmpc_controller.hpp
src/nmpc_controller/scripts/: patch_acados_vendor.sh
src/nmpc_controller/src/: nmpc_controller.cpp
src/path_planning_module/grid_map/: CMakeLists.txt  package.xml
src/path_planning_module/grid_map/include/: grid_map.hpp  grid_map_cuda.cuh  raycast.hpp
src/path_planning_module/grid_map/src/: grid_map.cpp  grid_map_cuda.cu  raycast.cpp
src/path_planning_module/planner_manager/: CMakeLists.txt  package.xml
src/path_planning_module/planner_manager/config/: ego_planner_params.yaml  fc_params.yaml  mavros_config.yaml  mavros_pluginlists.yaml
src/path_planning_module/planner_manager/include/: ego_planner_component.hpp  flight_controller_component.hpp
src/path_planning_module/planner_manager/launch/: ego_planner.launch.py  flight_controller.launch.py
src/path_planning_module/planner_manager/src/: ego_planner_component.cpp  flight_controller_component.cpp
src/path_planning_module/planner_utils/: CMakeLists.txt  package.xml
src/path_planning_module/planner_utils/include/: dyn_a_star.hpp  lbfgs.hpp  plan_container.hpp  plan_visualizer.hpp  poly_traj_optimizer.hpp  poly_traj_utils.hpp  root_finder.hpp
src/path_planning_module/planner_utils/src/: dyn_a_star.cpp  plan_visualizer.cpp  poly_traj_optimizer.cpp
src/perception_module/jetson_gscam2/: CMakeLists.txt  README.md  package.xml
src/perception_module/jetson_gscam2/config/: camera_calibration.yaml  default_preset.yaml  latency_preset.yaml  streaming_1080p_preset.yaml  wide_angle_preset.yaml
src/perception_module/jetson_gscam2/launch/: csi_cam.launch.py
src/perception_module/jetson_gscam2/src/: csi_camera_component.cpp
src/perception_module/lidar_2d_odom/: CMakeLists.txt  README.md  package.xml
src/perception_module/lidar_2d_odom/include/: scan_to_pointcloud_component.hpp  tilt_gated_odom_component.hpp
src/perception_module/lidar_2d_odom/launch/: lidar_2d_odom.launch.py
src/perception_module/lidar_2d_odom/src/: scan_to_pointcloud_component.cpp  tilt_gated_odom_component.cpp
src/perception_module/map_alignment/: CMakeLists.txt  package.xml
src/perception_module/map_alignment/config/: map_alignment_params.yaml
src/perception_module/map_alignment/include/: map_alignment.hpp
src/perception_module/map_alignment/launch/: test_alignment.launch.py
src/perception_module/map_alignment/maps/klk/: single_id_26.csv  single_id_41.csv  triple_id_23_26_51.csv
src/perception_module/map_alignment/scripts/: mock_trunk_publisher.py
src/perception_module/map_alignment/src/: map_alignment_component.cpp
src/perception_module/odom_republisher/: CMakeLists.txt  package.xml
src/perception_module/odom_republisher/config/: odom_republisher_params.yaml
src/perception_module/odom_republisher/include/: odom_republisher_component.hpp
src/perception_module/odom_republisher/launch/: odom_republisher.launch.py
src/perception_module/odom_republisher/src/: odom_republisher_component.cpp
src/perception_module/trunk_segmentation/: CMakeLists.txt  package.xml
src/perception_module/trunk_segmentation/config/: trunk_segmentation_params.yaml
src/perception_module/trunk_segmentation/include/: circle_fitting.hpp  clustering_algorithms.hpp  tracked_trunk.hpp  trunk_seg_component.hpp  trunk_seg_viz.hpp  trunk_tracking.hpp
src/perception_module/trunk_segmentation/launch/: trunk_segmentation.launch.py
src/perception_module/trunk_segmentation/src/: circle_fitting.cpp  clustering_algorithms.cpp  trunk_seg_component.cpp  trunk_seg_viz.cpp  trunk_tracking.cpp
src/uosm_robot_viewer/: CMakeLists.txt  README.md  package.xml
src/uosm_robot_viewer/launch/: default_viewer.launch.py
src/uosm_robot_viewer/rviz/: calib_config.rviz  urdf_config.rviz  viewer_config.rviz
src/uosm_robot_viewer/scripts/: odom_to_tf_publisher.py
src/uosm_robot_viewer/urdf/: uosm_uav_calib.urdf.xacro  uosm_uav_platform.urdf.xacro
src/uosm_uav_bringup/: CMakeLists.txt  README.md  package.xml
src/uosm_uav_bringup/config/: fc.yaml  mcap_writer_options.yaml  planner.yaml  qos_overrides.yaml
src/uosm_uav_bringup/config/dds/: cyclonedds_host.xml  zenoh_bridge_device.json5  zenoh_bridge_host.json5
src/uosm_uav_bringup/config/rviz/: gridmap_test.rviz  landmark_fusion_bag_test.rviz  live_test.rviz  map_alignment_bag_test.rviz  simulation_test.rviz  validate_landmark_fusion.rviz
src/uosm_uav_bringup/config/sensor_config/: common_stereo.yaml  ffmpeg.yaml  zed2i.yaml  zedm.yaml  zedm_gen3.yaml  zedm_none.yaml
src/uosm_uav_bringup/launch/: calib_sensors.launch.py  evaluate_trunk_detection.launch.py  real_jetson_orin_interactive.launch.py  real_jetson_orin_preset_wp.launch.py  real_jetson_orin_zedm_ego_only.launch.py  real_lidar_vio_compare.launch.py  real_minimal.launch.py  real_minimal_launch.py  real_sanity_check.launch.py  real_sanity_check_lidar_fusion.launch.py  reboot_px4.launch.py  sim_interactive_single.launch.py  sim_preset_wp_single.launch.py  test_gridmap.launch.py  test_landmark_fusion.launch.py  test_map_alignment.launch.py  validate_landmark_fusion.launch.py
src/uosm_uav_bringup/scripts/: odom_to_tf_node.py  reboot_px4_node.py  waypoint_visualizer_node.py
src/uosm_uav_interface/: CMakeLists.txt  package.xml
src/uosm_uav_interface/action/: EgoPlanner.action
src/uosm_uav_interface/include/: cuda_util.cuh  nanoflann.hpp  node_params.hpp  timer_profile.hpp
src/uosm_uav_interface/msg/: MincoTraj.msg  PolynomialTraj.msg  TrunkObservation.msg  TrunkObservationArray.msg  WifiInfoStamped.msg
src/virtual_module/map_processor/: CMakeLists.txt  README.md  package.xml
src/virtual_module/map_processor/config/: map_processor_params.yaml
src/virtual_module/map_processor/launch/: map_processor.launch.py
src/virtual_module/map_processor/src/: map_processor_node.cpp
(+41 files in other folders)
