<?xml version="1.0"?>
<package format="2">
  <name>planner_manager</name>
  <version>0.0.0</version>
  <description>The path planning manager package</description>

  <maintainer email="skl1g14@soton.ac.uk">Janitor</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
 	<depend>tf2_ros</depend>
  <depend>tf2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
	<depend>mavros</depend>
  <depend>mavros_extras</depend>
  <depend>mavros_msgs</depend>
  <depend>nmpc_controller</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>diagnostic_updater</depend>
  <depend>uosm_uav_interface</depend> 
  <depend>planner_utils</depend>
  
  <depend>ament_index_python</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>