<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jetson_gscam2</name>
  <version>1.0.0</version>
  <description>CSI Camera Node with Hardware Encoding for Jetson</description>
  <maintainer email="skl1g14@soton.ac.uk">Janitor</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>camera_info_manager</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>
  <depend>foxglove_msgs</depend>
  <depend>uosm_uav_interface</depend>
  <depend>libopencv-dev</depend>
  <depend>libgstreamer1.0-dev</depend>
  <depend>libgstreamer-plugins-base1.0-dev</depend>
  <depend>libgstreamer-plugins-good1.0-dev</depend>
  <depend>libgstreamer-plugins-bad1.0-dev</depend>
  <depend>gstreamer1.0-plugins-ugly</depend>
  <depend>gstreamer1.0-libav</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>