<?xml version="1.0"?>
<package format="2">
  <name>lidar_2d_odom</name>
  <version>0.0.0</version>
  <description>LaserScan to PointCloud2 for KISS-ICP; tilt-gated 2D lidar odom publisher</description>
  <maintainer email="skl1g14@soton.ac.uk">Janitor</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
