<?xml version="1.0"?>
<package format="2">
  <name>map_alignment</name>
  <version>0.0.0</version>
  <description>The map alignment package</description>

  <maintainer email="skl1g14@soton.ac.uk">Janitor</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>composition_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>uosm_uav_interface</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_ros</depend>
  <depend>libpcl-all-dev</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ament_index_python</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

    <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>