<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>map_processor</name>
  <version>0.1.0</version>
  <description>
    A ROS 2 package to load a PCD map, process it (voxelize, crop), and publish as global map.
  </description>
  <maintainer email="skl1g14@soton.ac.uk">Janitor</maintainer>
  <license>MIT</license>
  
   <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>uosm_uav_interface</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>